# nao

./: CMakeLists.txt  main.cpp  naointerface.cpp  naointerface.h  naointerface.i  qiproject.xml
build-linux64-naoqi-sdk/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dependencies.cmake  nao.cbp  naointerfacePYTHON_wrap.cxx
build-linux64-naoqi-sdk/sdk/lib/: naointerface.py
core/common/: ball.cpp  ball.h  enums.h  imageconstants.h  worldobject.cpp  worldobject.h  worldobjectmanager.cpp  worldobjectmanager.h
core/math/: mathdefs.h  vector2d.cpp  vector2d.h
core/vision/: balldetector.cpp  balldetector.h  detector.cpp  detector.h
core/vision/debug/: debugballdetector.cpp  debugballdetector.h
